--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -7,8 +7,7 @@ components:
   - ../../flux/components/common
 resources:
   - ./binder/ks.yaml
-  # - ./druid/ks.yaml
-  # - ./feast/ks.yaml
+  - ./feast/ks.yaml
   - ./flyte/ks.yaml
   - ./iceberg/ks.yaml
   - ./jupyter/ks.yaml
