feat: deploy kafka

--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./flyte/ks.yaml
   - ./iceberg/ks.yaml
   - ./jupyter/ks.yaml
-  # - ./kafka/ks.yaml
+  - ./kafka/ks.yaml
   - ./kuberay/ks.yaml
   - ./mlflow/ks.yaml
   - ./seldon-core/ks.yaml
