fix(spark): disable uiIngress

--- a/kubernetes/apps/ml-system/spark/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/spark/app/helmrelease.yaml
@@ -25,9 +25,7 @@ spec:
     fullnameOverride: spark
     controller:
       uiIngress:
-        enable: true
-        urlFormat: spark.goyangi.cloud
-        ingressClassName: internal
+        enable: false
       resources:
         requests:
           cpu: 10m
