--- a/kubernetes/flux/meta/repositories/helm/kafka.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kafka.yaml
@@ -8,4 +8,4 @@ metadata:
 spec:
   type: oci
   interval: 12h
-  url: oci://quay.io/strimzi-helm/strimzi-kafka-operator
+  url: oci://quay.io/strimzi-helm
