--- a/kubernetes/apps/ml-system/kafka/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/kafka/app/helmrelease.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: kafka
+      chart: strimzi-kafka-operator
       version: 0.45.0
       sourceRef:
         kind: HelmRepository
