fix: controller name

--- a/kubernetes/apps/ml-system/iceberg/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       retries: 3
   values:
     controllers:
-      mlflow:
+      iceberg:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
