--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       data:
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        AWS_SECRET ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
         key: minio
