feat: deploy lakekeeper
* rust-based iceberg spec

--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -28,6 +28,7 @@ resources:
   - ./jupyterhub.yaml
   - ./kafka.yaml
   - ./kuberay.yaml
+  - ./lakekeeper.yaml
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
   - ./openebs.yaml
