--- a/kubernetes/apps/ml-system/lakekeeper/ks.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app iceberg
+  name: &app lakekeeper
   namespace: &namespace ml-system
 spec:
   commonMetadata:
@@ -12,10 +12,10 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
-    - name: minio
-      namespace: default
+    - name: cloudnative-pg-cluster
+      namespace: database
   interval: 30m
-  path: ./kubernetes/apps/ml-system/iceberg/app
+  path: ./kubernetes/apps/ml-system/lakekeeper/app
   prune: false
   postBuild:
     substitute:
