fix(hass): add memory request

--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -49,6 +49,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                requests: 128Mi
               limits:
                 memory: 2Gi
           code-server:
