--- a/kubernetes/apps/network/external/cloudflared/helmrelease.yaml
+++ b/kubernetes/apps/network/external/cloudflared/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 128Mi
               limits:
                 memory: 256Mi
     defaultPodOptions:
