--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -50,6 +50,7 @@ spec:
             resources: &resources
               requests:
                 cpu: 10m
+                memory: 128Mi
               limits:
                 memory: 256Mi
         containers:
