fix(lakekeeper): typo

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -27,7 +27,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
-                requests: 128Mi
+                memory: 128Mi
             config:
               LAKEKEEPER__BASE_URI: https://lakekeeper.goyangi.cloud
             extraInitContainers:
