--- a/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
@@ -27,6 +27,6 @@ spec:
       resources:
         requests:
           cpu: 10m
-          requests: 128Mi
+          memory: 128Mi
       config:
         LAKEKEEPER__BASE_URI: https://lakekeeper.goyangi.cloud
