--- a/kubernetes/apps/ml-system/feast/app/kustomization.yaml
+++ b/kubernetes/apps/ml-system/feast/app/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
-  - ./helmrelease.yaml
+  # renovate: datasource=github depName=feast-dev/feast
+  - https://raw.githubusercontent.com/feast-dev/feast/refs/heads/v0.45-branch/infra/feast-operator/dist/install.yaml
 
