--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -11,25 +11,17 @@ spec:
     name: lakekeeper-secret
     template:
       data:
-        LAKEKEEPER__PG_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
-        LAKEKEEPER__PG_HOST_R: postgres16-r.database.svc.cluster.local
-        LAKEKEEPER__PG_HOST_W: postgres16-rw.database.svc.cluster.local
-        LAKEKEEPER__PG_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
-        LAKEKEEPER__PG_PASSWORD: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
-        LAKEKEEPER__PG_DATABASE: lakekeeper
-        LAKEKEEPER__PG_SSL_MODE: disable
-        LAKEKEEPER__OPENID_PROVIDER_URI: https://id.goyangi.cloud
-        LAKEKEEPER__AUTHZ_BACKEND: allowall
+        LAKEKEEPER_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
         LAKEKEEPER__UI__OPENID_CLIENT_ID: "{{ .LAKEKEEPER_OIDC_CLIENT_ID }}"
         values.yaml: |
           fullnameOverride: lakekeeper
           catalog:
+            annotations:
+              reloader.stakater.com/auto: "true"
             resources:
               requests:
                 cpu: 10m
                 memory: 128Mi
-            config:
-              LAKEKEEPER__BASE_URI: https://lakekeeper.goyangi.cloud
             extraInitContainers:
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
@@ -55,17 +47,15 @@ spec:
           secretBackend:
             postgres:
               encryptionKeySecret: lakekeeper-secret
-              encyptionKeySecretKey: LAKEKEEPER__PG_ENCRYPTION_KEY
+              encyptionKeySecretKey: LAKEKEEPER_ENCRYPTION_KEY
           postgresql:
             enabled: false
           externalDatabase:
             host_read: postgres16-w.database.svc.cluster.local
             host_write: postgres16-rw.database.svc.cluster.local
             database: lakekeeper
-            userSecret: &secret lakekeeper-secret
-            userSecretKey: LAKEKEEPER__PG_USER
-            passwordSecret: *secret
-            passwordSecretKey: LAKEKEEPER__PG_PASSWORD
+            user: "{{ .LAKEKEEPER_POSTGRES_USER }}"
+            password: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
           auth:
             oauth2:
               providerUri: https://id.goyangi.cloud
