chore: undeploy lakekeeper for now

--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -8,7 +8,7 @@ components:
 resources:
   - ./feast/ks.yaml
   - ./flyte/ks.yaml
-  - ./lakekeeper/ks.yaml
+  # - ./lakekeeper/ks.yaml
   - ./jupyter/ks.yaml
   - ./kafka/ks.yaml
   - ./kuberay/ks.yaml
