--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,32 +17,31 @@
     "files.trimTrailingWhitespace": true,
     "material-icon-theme.files.associations": {
       // TODO: https://github.com/PKief/vscode-material-icon-theme/issues/330
-      "*.sops.env": "lock",
-      "*.sops.yaml": "lock"
+      "*.sops.yaml": "lock",
+      "helmfile.yaml": "helm",
+      "kubeconfig": "kubernetes",
+      "talosconfig": "kubernetes"
     },
     "material-icon-theme.folders.associations": {
         // top level
-        ".archive": "archive",
+        "bootstrap": "seeders",
+        "flux": "pipe",
+        "talos": "linux",
         // .github
-        ".github/workflows": "robot",
+        ".github/renovate": "robot",
+        ".github/workflows": "ci",
         // namespaces
         "actions-runner-system": "github",
         "cert-manager": "guard",
         "default": "home",
-        "digester-system": "hook",
         "external-secrets": "secure",
         "flux-system": "pipe",
-        "hack": "scripts",
         "kube-system": "kubernetes",
-        "monitoring": "event",
         "network": "connection",
-        "networking": "connection",
         "observability": "event",
-        "rook-ceph": "base",
-        "storage": "dump",
-        "system-upgrade": "update",
-        "tools": "tools",
-        "volsync": "aws"
+        "openebs-system": "base",
+        "rook-ceph": "dump",
+        "volsync-system": "aws"
     },
     "sops.defaults.ageKeyFile": "age.key",
     "vs-kubernetes": {
