--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -1,20 +1,9 @@
+---
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
 version: '3'
-tasks:
-  ks-*:
-    desc: Apply a Flux KS for a cluster [PATH=required]
-    cmd: >
-      flux build --namespace flux-system ks {{base .PATH}} --kustomization-file {{.KUBERNETES_DIR}}/apps/{{.PATH}}/ks.yaml --path {{.KUBERNETES_DIR}}/apps/{{.PATH}}{{if contains .KUSTOMIZATION "not found"}} --dry-run{{end}} | yq 'with(select(.apiVersion == "kustomize.toolkit.fluxcd.io/v1" and .kind == "Kustomization"); .metadata.namespace = "flux-system")' - | kubectl {{.OPERATION}} {{if eq .OPERATION "apply"}}--server-side  --field-manager=kustomize-controller{{end}} --filename -
 
-    requires:
-      vars: [PATH]
-    vars:
-      OPERATION: '{{index .MATCH 0}}'
-      KUSTOMIZATION:
-        sh: flux --namespace flux-system get kustomizations {{base .PATH}}
-    preconditions:
-      - test -f {{.KUBERNETES_DIR}}/apps/{{.PATH}}/ks.yaml
-      - which flux kubectl yq
+tasks:
+
   browse-pvc:
     desc: Mount a PVC to an temp container [NS=default] [CLAIM=required]
     interactive: true
@@ -27,16 +16,29 @@ tasks:
       - kubectl --namespace {{.NS}} get persistentvolumeclaims {{.CLAIM}}
       - kubectl browse-pvc --version
       - which kubectl
+
+  node-shell:
+    desc: Open a shell to a node [NODE=required]
+    interactive: true
+    cmd: kubectl node-shell -n kube-system -x {{.NODE}}
+    requires:
+      vars: [NODE]
+    preconditions:
+      - kubectl get nodes {{.NODE}}
+      - kubectl node-shell --version
+      - which kubectl
+
   sync-secrets:
     desc: Sync all ExternalSecrets
     cmds:
-      - for: {var: SECRETS, split: "\n"}
+      - for: { var: SECRETS, split: "\n" }
         cmd: kubectl --namespace {{splitList "," .ITEM | first}} annotate externalsecret {{splitList "," .ITEM | last}} force-sync="{{now | unixEpoch}}" --overwrite
     vars:
       SECRETS:
-        sh: kubectl --kubeconfig {{.KUBERNETES_DIR}}/kubeconfig get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
+        sh: kubectl get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
     preconditions:
       - which kubectl
+
   cleanse-pods:
     desc: Cleanse pods with a Failed/Pending/Succeeded phase
     cmds:
@@ -46,14 +48,15 @@ tasks:
         cmd: kubectl delete pods --all-namespaces --field-selector status.phase={{.ITEM.PHASE}} --ignore-not-found=true
     preconditions:
       - which kubectl
+
   # https://docs.github.com/en/enterprise-cloud@latest/actions/hosting-your-own-runners/managing-self-hosted-runners-with-actions-runner-controller/deploying-runner-scale-sets-with-actions-runner-controller#upgrading-arc
   upgrade-arc:
     desc: Upgrade the ARC
     cmds:
-      - helm -n actions-runner-system uninstall gha-runner-scale-set
-      - helm -n actions-runner-system uninstall gha-runner-scale-set-controller
+      - helm -n actions-runner-system uninstall home-ops-runner
+      - helm -n actions-runner-system uninstall actions-runner-controller
       - sleep 5
-      - flux -n actions-runner-system reconcile hr gha-runner-scale-set-controller
-      - flux -n actions-runner-system reconcile hr gha-runner-scale-set
+      - flux -n actions-runner-system reconcile hr actions-runner-controller
+      - flux -n actions-runner-system reconcile hr home-ops-runner
     preconditions:
       - which flux helm
