--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -1,27 +1,29 @@
+---
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
 version: '3'
 
-includes:
-  s:
-    taskfile: ../sops/Taskfile.yaml
 tasks:
+
   apply-node:
-    desc: Apply Talos config to a node [IP=required]
+    desc: Apply Talos config to a node [IP=required] [MODE=auto]
     cmds:
       - task: down
-      - sops exec-file --input-type yaml --output-type yaml {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 "minijinja-cli {}" | talosctl --nodes {{.IP}} apply-config --mode={{.MODE}} --file /dev/stdin
+      - minijinja-cli {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2 | op inject | talosctl --nodes {{.IP}} apply-config --mode {{.MODE}} --config-patch @{{.TALOS_DIR}}/nodes/{{.IP}}.yaml --file /dev/stdin
       - talosctl --nodes {{.IP}} health
       - task: up
     vars:
       MODE: '{{.MODE | default "auto"}}'
+      TALOS_MACHINE_TYPE:
+        sh: talosctl --nodes {{.IP}} get machinetypes --output=jsonpath='{.spec}'
     requires:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
-      - which minijinja-cli sops talosctl
+      - test -f {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2
+      - test -f {{.TALOS_DIR}}/nodes/{{.IP}}.yaml
+      - test -f {{.ROOT_DIR}}/talosconfig
+      - which minijinja-cli op talosctl
+
   upgrade-node:
     desc: Upgrade Talos on a single node [IP=required]
     cmds:
@@ -30,32 +32,35 @@ tasks:
       - talosctl --nodes {{.IP}} health
       - task: up
     vars:
+      TALOS_MACHINE_TYPE:
+        sh: talosctl --nodes {{.IP}} get machinetypes --output=jsonpath='{.spec}'
       TALOS_IMAGE:
-        sh: yq '.machine.install.image' {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 | minijinja-cli
+        sh: minijinja-cli {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2 | yq '.machine.install.image'
     requires:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.TALOS_DIR}}/{{.TALOS_MACHINE_TYPE}}.yaml.j2
+      - test -f {{.TALOS_DIR}}/nodes/{{.IP}}.yaml
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which minijinja-cli talosctl yq
+
   upgrade-k8s:
     desc: Upgrade Kubernetes across the whole cluster
     cmds:
       - task: down
-      - talosctl --nodes {{.TALOS_CONTROLLER}} upgrade-k8s --to $KUBERNETES_VERSION
+      - talosctl --nodes {{.RANDOM_CONTROLLER}} upgrade-k8s --to $KUBERNETES_VERSION
       - task: up
     vars:
-      TALOS_CONTROLLER:
+      RANDOM_CONTROLLER:
         sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
     preconditions:
-      - talosctl --nodes {{.TALOS_CONTROLLER}} get machineconfig
+      - talosctl --nodes {{.RANDOM_CONTROLLER}} get machineconfig
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which jq talosctl
+
   reboot-node:
     desc: Reboot Talos on a single node [IP=required] [MODE=default]
     cmds:
@@ -70,9 +75,9 @@ tasks:
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which talosctl
+
   shutdown-cluster:
     desc: Shutdown Talos across the whole cluster
     prompt: Shutdown the Talos cluster ... continue?
@@ -81,10 +86,11 @@ tasks:
       IP_ADDRS:
         sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
     preconditions:
-      - talosctl --nodes {{.IP_ADDRS}} get machineconfig
+      - talosctl --nodes {{.NODES}} get machineconfig
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which jq talosctl
+
   reset-node:
     desc: Reset Talos on a single node [IP=required]
     prompt: Reset Talos node '{{.IP}}' ... continue?
@@ -94,99 +100,45 @@ tasks:
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which talosctl
+
   reset-cluster:
     desc: Reset Talos across the whole cluster
     prompt: Reset the Talos cluster ... continue?
     cmd: talosctl reset --nodes {{.IP_ADDRS}} --graceful=false
     vars:
       IP_ADDRS:
-        sh: talosctl --talosconfig {{.KUBERNETES_DIR}}/talosconfig config info --output json | jq --join-output '[.nodes[]] | join(",")'
+        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
     preconditions:
-      - talosctl --nodes {{.IP_ADDRS}} get machineconfig
+      - talosctl --nodes {{.NODES}} get machineconfig
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which jq talosctl
+
   kubeconfig:
     desc: Generate the kubeconfig for a Talos cluster
-    cmd: talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force --force-context-name main {{.KUBERNETES_DIR}}
+    cmd: talosctl kubeconfig --nodes {{.RANDOM_CONTROLLER}} --force --force-context-name main {{.ROOT_DIR}}
     vars:
-      TALOS_CONTROLLER:
+      RANDOM_CONTROLLER:
         sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
     preconditions:
       - talosctl config info
-      - test -f {{.KUBERNETES_DIR}}/talosconfig
+      - test -f {{.ROOT_DIR}}/talosconfig
       - which jq talosctl
-  apply-cluster:
-    desc: Apply Talos config across the whole cluster [MODE=default]
-    cmds:
-      - for: {var: IP_ADDRS}
-        task: apply-node
-        vars:
-          IP: '{{.ITEM}}'
-          MODE: '{{.MODE}}'
-    vars:
-      MODE: '{{.MODE | default "auto"}}'
-      IP_ADDRS:
-        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(" ")'
-    preconditions:
-      - which jq talosctl
-  upgrade-cluster:
-    desc: Upgrade Talos across the whole cluster
-    cmds:
-      - for: {var: IP_ADDRS}
-        task: upgrade-node
-        vars:
-          IP: '{{.ITEM}}'
-    vars:
-      IP_ADDRS:
-        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(" ")'
-    preconditions:
-      - which jq talosctl
-  reboot-cluster:
-    desc: Reboot Talos on a single node [IP=required] [MODE=default]
-    cmds:
-      - for: {var: IP_ADDRS}
-        task: reboot-node
-        vars:
-          IP: '{{.ITEM}}'
-          MODE: '{{.MODE}}'
-    vars:
-      IP_ADDRS:
-        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(" ")'
-    preconditions:
-      - which jq talosctl
+
   down:
     internal: true
     cmds:
-      # - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
-      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_WARN --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
+      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
       - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
     preconditions:
       - which kubectl
+
   up:
     internal: true
     cmds:
-      # - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
-      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_WARN --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
+      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
       - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
     preconditions:
       - which kubectl
-  talosconfig:
-    cmds:
-      - task: s:decrypt-secrets
-      - yq -r .machine.ca.crt {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 | base64 -d > ca.crt
-      - yq -r .machine.ca.key {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 | base64 -d > ca.key
-      - talosctl gen key --name admin
-      - talosctl gen csr --key admin.key --ip 127.0.0.1
-      - talosctl gen crt --ca ca --csr admin.csr --name admin --hours 8760
-      - yq eval '.contexts.main.ca = "'"$(cat ca.crt | base64)"'" | .contexts.main.crt = "'"$(cat admin.crt | base64)"'" | .contexts.main.key = "'"$(cat admin.key | base64)"'"' -i {{ .KUBERNETES_DIR }}/talosconfig
-      - task: s:encrypt-secrets
-      - rm admin.key ca.crt ca.key admin.csr admin.crt
-    vars:
-      IP:
-        sh: ls {{.KUBERNETES_DIR}}/bootstrap/talos/ | head -n 1 | cut -d '.' -f1-4
-    preconditions:
-      - which yq talosctl base64
-
