--- a/.taskfiles/workstation/Taskfile.yaml
+++ b/.taskfiles/workstation/Taskfile.yaml
@@ -1,8 +1,12 @@
+---
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
 version: '3'
+
 vars:
   WORKSTATION_RESOURCES_DIR: '{{.ROOT_DIR}}/.taskfiles/workstation/resources'
+
 tasks:
+
   brew:
     desc: Set up Homebrew tools
     cmds:
@@ -14,11 +18,12 @@ tasks:
     preconditions:
       - which brew
       - test -f {{.WORKSTATION_RESOURCES_DIR}}/Brewfile
+
   krew:
     desc: Set up Krew tools
     deps: [brew]
     cmds:
-      - kubectl krew install cert-manager cnpg browse-pvc rook-ceph view-secret
+      - kubectl krew install cert-manager cnpg browse-pvc node-shell rook-ceph view-secret
     preconditions:
       - kubectl krew version
       - which kubectl
