--- a/kubernetes/apps/istio-system/kustomization.yaml
+++ b/kubernetes/apps/istio-system/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: istio-system
 components:
-  - ../../flux/components/common
+  - ../../components/common
 resources:
   - ./istio-base/ks.yaml
   - ./istio-cni/ks.yaml
