--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: ml-system
 components:
-  - ../../flux/components/common
+  - ../../components/common
 resources:
   - ./feast/ks.yaml
   - ./flyte/ks.yaml
