--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
 components:
-  - ../../flux/components/common
+  - ../../components/common
 resources:
   - ./unpoller/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
