--- a/kubernetes/apps/system-upgrade/kustomization.yaml
+++ b/kubernetes/apps/system-upgrade/kustomization.yaml
@@ -2,9 +2,13 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: actions-runner-system
+namespace: system-upgrade
 components:
   - ../../components/common
 resources:
-  - ./actions-runner-controller/ks.yaml
-
+  - ./system-upgrade-controller/ks.yaml
+configMapGenerator:
+  - name: system-upgrade-plan-versions
+    env: ./.env
+generatorOptions:
+  disableNameSuffixHash: true
