--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/app/rbac.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/app/rbac.yaml
@@ -2,19 +2,19 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: system-upgrade
+  name: system-upgrade-controller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: system-upgrade
-    namespace: kube-system
+    name: system-upgrade-controller
+    namespace: system-upgrade
 ---
 apiVersion: talos.dev/v1alpha1
 kind: ServiceAccount
 metadata:
-  name: system-upgrade
+  name: system-upgrade-controller
 spec:
   roles: ["os:admin"]
