fix(suc): dependsOn name

--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
@@ -31,7 +31,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: system-upgrade
+    - name: system-upgrade-controller
       namespace: system-upgrade
   interval: 30m
   path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/plans
