fix(lakekeeper): split secret

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -1,3 +1,22 @@
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: lakekeeper-encryption
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: lakekeeper-encryption-secret
+    template:
+      data:
+        LAKEKEEPER_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
+  dataFrom:
+    - extract:
+        key: lakekeeper
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
@@ -11,8 +30,6 @@ spec:
     name: lakekeeper-secret
     template:
       data:
-        LAKEKEEPER_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
-        LAKEKEEPER__UI__OPENID_CLIENT_ID: "{{ .LAKEKEEPER_OIDC_CLIENT_ID }}"
         values.yaml: |
           fullnameOverride: lakekeeper
           catalog:
@@ -46,7 +63,7 @@ spec:
             ingressClassName: internal
           secretBackend:
             postgres:
-              encryptionKeySecret: lakekeeper-secret
+              encryptionKeySecret: lakekeeper-encryption-secret
               encyptionKeySecretKey: LAKEKEEPER_ENCRYPTION_KEY
           postgresql:
             enabled: false
