fix(lakekeeper): secretKey is always encryptionKey
* in this release anyway

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -1,22 +1,3 @@
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: lakekeeper-encryption
-spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword
-  target:
-    name: lakekeeper-encryption-secret
-    template:
-      data:
-        LAKEKEEPER_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
-  dataFrom:
-    - extract:
-        key: lakekeeper
----
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
@@ -30,6 +11,7 @@ spec:
     name: lakekeeper-secret
     template:
       data:
+        encryptionKey: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
         values.yaml: |
           fullnameOverride: lakekeeper
           catalog:
@@ -63,8 +45,8 @@ spec:
             ingressClassName: internal
           secretBackend:
             postgres:
-              encryptionKeySecret: lakekeeper-encryption-secret
-              encyptionKeySecretKey: LAKEKEEPER_ENCRYPTION_KEY
+              encryptionKeySecret: lakekeeper-secret
+              encyptionKeySecretKey: encryptionKey
           postgresql:
             enabled: false
           externalDatabase:
