--- a/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
@@ -24,9 +24,9 @@ spec:
         property: POSTGRES_SUPER_PASS
     - secretKey: aws-access-key-id
       remoteRef:
-        key: cloudnative-pg
-        property: CLOUDFLARE_ACCESS_KEY_ID
+        key: minio
+        property: MINIO_USER_PASSWORD
     - secretKey: aws-secret-access-key
       remoteRef:
-        key: cloudnative-pg
-        property: CLOUDFLARE_SECRET_ACCESS_KEY
+        key: minio
+        property: MINIO_ROOT_PASSWORD
