fix(lakekeeper): run init-db with migration question mark

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -21,6 +21,7 @@ spec:
               requests:
                 cpu: 10m
                 memory: 128Mi
+          dbMigrations:
             extraInitContainers:
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
