fix(cnpg): aws access key field

--- a/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
@@ -25,7 +25,7 @@ spec:
     - secretKey: aws-access-key-id
       remoteRef:
         key: minio
-        property: MINIO_USER_PASSWORD
+        property: MINIO_ROOT_USER
     - secretKey: aws-secret-access-key
       remoteRef:
         key: minio
