fix(lakekeeper): init-db as job

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -11,6 +11,12 @@ spec:
     name: lakekeeper-secret
     template:
       data:
+        INIT_POSTGRES_DBNAME: "lakekeeper"
+        INIT_POSTGRES_HOST: "postgres16-rw.database.svc.cluster.local"
+        INIT_POSTGRES_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
+        INIT_POSTGRES_PASS: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
         encryptionKey: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
         values.yaml: |
           fullnameOverride: lakekeeper
@@ -21,23 +27,6 @@ spec:
               requests:
                 cpu: 10m
                 memory: 128Mi
-          dbMigrations:
-            extraInitContainers:
-              - name: init-db
-                image: ghcr.io/solanyn/postgres-init:16
-                env:
-                  - name: INIT_POSTGRES_DBNAME
-                    value: "lakekeeper"
-                  - name: INIT_POSTGRES_HOST
-                    value: "postgres16-rw.database.svc.cluster.local"
-                  - name: INIT_POSTGRES_USER
-                    value: "{{ .LAKEKEEPER_POSTGRES_USER }}"
-                  - name: INIT_POSTGRES_PASS
-                    value: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
-                  - name: INIT_POSTGRES_SUPER_PASS
-                    value: "{{ .POSTGRES_SUPER_PASS }}"
-                  - name: INIT_POSTGRES_SUPER_USER
-                    value: "{{ .POSTGRES_SUPER_USER }}"
           ingress:
             enabled: true
             annotations:
