fix(lakekeeper): typo

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -40,7 +40,7 @@ spec:
           postgresql:
             enabled: false
           externalDatabase:
-            host_read: postgres16-w.database.svc.cluster.local
+            host_read: postgres16-ro.database.svc.cluster.local
             host_write: postgres16-rw.database.svc.cluster.local
             database: lakekeeper
             user: "{{ .LAKEKEEPER_POSTGRES_USER }}"
