fix(lakekeeper): not nobody user maybe

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -21,6 +21,9 @@ spec:
         values.yaml: |
           fullnameOverride: lakekeeper
           catalog:
+            image:
+              uid: 1000
+              gid: 1000
             annotations:
               reloader.stakater.com/auto: "true"
             resources:
@@ -29,8 +32,6 @@ spec:
                 memory: 128Mi
           ingress:
             enabled: true
-            annotations:
-              nginx.ingress.kubernetes.io/rewrite-target: /
             host: lakekeeper.goyangi.cloud
             ingressClassName: internal
           secretBackend:
