--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -21,11 +21,15 @@ spec:
         values.yaml: |
           fullnameOverride: lakekeeper
           catalog:
-            image:
-              uid: 1000
-              gid: 1000
             annotations:
               reloader.stakater.com/auto: "true"
+            config:
+              LAKEKEEPER__BASE_URI: lakekeeper.goyangi.cloud
+              LAKEKEEPER__PG_HOST_R: postgres16-ro.database.svc.cluster.local
+              LAKEKEEPER__PG_HOST_W: postgres16-rw.database.svc.cluster.local
+              LAKEKEEPER__PG_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
+              LAKEKEEPER__PG_PASSWORD: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
+              LAKEKEEPER__PG_DATABASE: lakekeeper
             resources:
               requests:
                 cpu: 10m
