fix(lakekeeper): try generic helm template

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -17,44 +17,17 @@ spec:
         INIT_POSTGRES_PASS: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
-        encryptionKey: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
-        values.yaml: |
-          fullnameOverride: lakekeeper
-          catalog:
-            annotations:
-              reloader.stakater.com/auto: "true"
-            config:
-              LAKEKEEPER__BASE_URI: lakekeeper.goyangi.cloud
-              LAKEKEEPER__PG_HOST_R: postgres16-ro.database.svc.cluster.local
-              LAKEKEEPER__PG_HOST_W: postgres16-rw.database.svc.cluster.local
-              LAKEKEEPER__PG_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
-              LAKEKEEPER__PG_PASSWORD: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
-              LAKEKEEPER__PG_DATABASE: lakekeeper
-            resources:
-              requests:
-                cpu: 10m
-                memory: 128Mi
-          ingress:
-            enabled: true
-            host: lakekeeper.goyangi.cloud
-            ingressClassName: internal
-          secretBackend:
-            postgres:
-              encryptionKeySecret: lakekeeper-secret
-              encyptionKeySecretKey: encryptionKey
-          postgresql:
-            enabled: false
-          externalDatabase:
-            host_read: postgres16-ro.database.svc.cluster.local
-            host_write: postgres16-rw.database.svc.cluster.local
-            database: lakekeeper
-            user: "{{ .LAKEKEEPER_POSTGRES_USER }}"
-            password: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
-          auth:
-            oauth2:
-              providerUri: https://id.goyangi.cloud
-            ui:
-              clientID: "{{ .LAKEKEEPER_OIDC_CLIENT_ID }}"
+        LAKEKEEPER__PG_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
+        LAKEKEEPER__BASE_URI: lakekeeper.goyangi.cloud
+        LAKEKEEPER__PG_HOST_R: postgres16-ro.database.svc.cluster.local
+        LAKEKEEPER__PG_HOST_W: postgres16-rw.database.svc.cluster.local
+        LAKEKEEPER__PG_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
+        LAKEKEEPER__PG_PASSWORD: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
+        LAKEKEEPER__PG_DATABASE: lakekeeper
+        LAKEKEEPER__OPENID_AUDIENCE: "{{ .LAKEKEEPER_OIDC_CLIENT_ID }}"
+        LAKEKEEPER__OPENID_PROVIDER_URI: &oidcProvider https://id.goyangi.cloud
+        LAKEKEEPER__UI__OPENID_PROVIDER_URI: *oidcProvider
+        LAKEKEEPER__UI__OPENID_CLIENT_ID: "{{ .LAKEKEEPER_OIDC_CLIENT_ID }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
