--- a/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -7,11 +8,11 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: lakekeeper
-      version: 0.3.2
+      chart: app-template
+      version: 3.7.1
       sourceRef:
         kind: HelmRepository
-        name: lakekeeper
+        name: bjw-s
         namespace: flux-system
   install:
     remediation:
@@ -21,7 +22,74 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  valuesFrom:
-    - kind: Secret
-      name: lakekeeper-secret
-      valuesKey: values.yaml
+  values:
+    controllers:
+      lakekeeper:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        initContainers:
+          init-db:
+            image:
+              repository: ghcr.io/solanyn/postgres-init
+              tag: 16
+            envFrom: &envFrom
+              - secretRef:
+                  name: lakekeeper-secret
+        containers:
+          app:
+            image:
+              repository: quay.io/lakekeeper/catalog
+              tag: 8411bb84-amd64@sha256:89b22f10e5c5b401a154c0dbb6e91eb1308a2dfca7b6e9a44616437a8bf785a0
+            envFrom: *envFrom
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: {drop: ["ALL"]}
+            resources:
+              requests:
+                cpu: 10m
+                memory: 128Mi
+              limits:
+                memory: 16Gi
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
+        seccompProfile: {type: RuntimeDefault}
+        supplementalGroups: [10000]
+    service:
+      app:
+        controller: *app
+        ports:
+          http:
+            port: *port
+    ingress:
+      app:
+        className: internal
+        hosts:
+          - host: lakekeeper.goyangi.cloud
+            paths:
+              - path: /
+                service:
+                  identifier: app
+                  port: http
+    persistence:
+      tmp:
+        type: emptyDir
+        sizeLimit: 100Mi
