--- a/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
@@ -39,14 +39,13 @@ spec:
             image:
               repository: quay.io/lakekeeper/catalog
               tag: 8411bb84-amd64@sha256:89b22f10e5c5b401a154c0dbb6e91eb1308a2dfca7b6e9a44616437a8bf785a0
-            command: ["migrate"]
+            args: ["migrate"]
             envFrom: *envFrom
         containers:
           app:
             image:
               repository: quay.io/lakekeeper/catalog
               tag: 8411bb84-amd64@sha256:89b22f10e5c5b401a154c0dbb6e91eb1308a2dfca7b6e9a44616437a8bf785a0
-            command: ["serve"]
             env:
               LAKEKEEPER__LISTEN_PORT: &port 8181
             envFrom: *envFrom
