--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
         LAKEKEEPER__PG_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
-        LAKEKEEPER__BASE_URI: lakekeeper.goyangi.cloud
+        LAKEKEEPER__BASE_URI: https://lakekeeper.goyangi.cloud
         LAKEKEEPER__PG_HOST_R: postgres16-ro.database.svc.cluster.local
         LAKEKEEPER__PG_HOST_W: postgres16-rw.database.svc.cluster.local
         LAKEKEEPER__PG_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
