fix(lakekeeper): use url

--- a/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/externalsecret.yaml
@@ -18,12 +18,9 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPER_USER }}"
         LAKEKEEPER__PG_ENCRYPTION_KEY: "{{ .LAKEKEEPER_ENCRYPTION_KEY }}"
+        LAKEKEEPER__PG_DATABASE_URL_WRITE: "postgres://{{ .LAKEKEEPER_POSTGRES_USER }}:{{ .LAKEKEEPER_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/lakekeeper"
+        LAKEKEEPER__PG_DATABASE_URL_READ: "postgres://{{ .LAKEKEEPER_POSTGRES_USER }}:{{ .LAKEKEEPER_POSTGRES_PASSWORD }}@postgres16-ro.database.svc.cluster.local:5432/lakekeeper"
         LAKEKEEPER__BASE_URI: https://lakekeeper.goyangi.cloud
-        LAKEKEEPER__PG_HOST_R: postgres16-ro.database.svc.cluster.local
-        LAKEKEEPER__PG_HOST_W: postgres16-rw.database.svc.cluster.local
-        LAKEKEEPER__PG_USER: "{{ .LAKEKEEPER_POSTGRES_USER }}"
-        LAKEKEEPER__PG_PASSWORD: "{{ .LAKEKEEPER_POSTGRES_PASSWORD }}"
-        LAKEKEEPER__PG_DATABASE: lakekeeper
         LAKEKEEPER__OPENID_AUDIENCE: "{{ .LAKEKEEPER_OIDC_CLIENT_ID }}"
         LAKEKEEPER__OPENID_PROVIDER_URI: &oidcProvider https://id.goyangi.cloud
         LAKEKEEPER__UI__OPENID_PROVIDER_URI: *oidcProvider
