fix(lakekeeper): run as nobody

--- a/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
@@ -72,6 +72,12 @@ spec:
                 memory: 128Mi
               limits:
                 memory: 16Gi
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65532
+        runAsGroup: 65534
+        seccompProfile: {type: RuntimeDefault}
     service:
       app:
         controller: *app
