fix(lakekeeper): debug

--- a/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/lakekeeper/app/helmrelease.yaml
@@ -46,7 +46,8 @@ spec:
             image:
               repository: quay.io/lakekeeper/catalog
               tag: v0.6.2
-            args: ["serve"]
+            # args: ["serve"]
+            command: ["sleep", "infinity"]
             env:
               LAKEKEEPER__LISTEN_PORT: &port 8181
             envFrom: *envFrom
