fix: loki alerting

--- a/kubernetes/apps/default/radarr/app/kustomization.yaml
+++ b/kubernetes/apps/default/radarr/app/kustomization.yaml
@@ -9,6 +9,12 @@ configMapGenerator:
   - name: radarr-configmap
     files:
       - pushover-notify.sh=./resources/pushover-notify.sh
+  - name: radarr-loki-rules
+    files:
+      - radarr.yaml=./lokirule.yaml
+    options:
+      labels:
+        loki_rule: "true"
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
