--- a/kubernetes/apps/default/zigbee/app/kustomization.yaml
+++ b/kubernetes/apps/default/zigbee/app/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 configMapGenerator:
   - name: zigbee-loki-rules
     files:
-      - zigbee.yaml=./resources/lokirule.yaml
+      - zigbee.yaml=./lokirule.yaml
     options:
       labels:
         loki_rule: "true"
