--- a/kubernetes/apps/default/autobrr/app/kustomization.yaml
+++ b/kubernetes/apps/default/autobrr/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 configMapGenerator:
   - name: autobrr-loki-rules
     files:
-      - autobrr.yaml=./resources/lokirule.yaml
+      - autobrr.yaml=./lokirule.yaml
     options:
       labels:
         loki_rule: "true"
