--- a/kubernetes/apps/default/prowlarr/app/kustomization.yaml
+++ b/kubernetes/apps/default/prowlarr/app/kustomization.yaml
@@ -4,3 +4,14 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+configMapGenerator:
+  - name: prowlarr-loki-rules
+    files:
+      - prowlarr.yaml=./lokirule.yaml
+    options:
+      labels:
+        loki_rule: "true"
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
