feat(iceberg): add args

--- a/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/iceberg/app/externalsecret.yaml
@@ -22,6 +22,8 @@ spec:
         CATALOG_CATALOG__IMPL: org.apache.iceberg.jdbc.JdbcCatalog
         CATALOG_URI: "postgres://{{ .ICEBERG_POSTGRES_USER }}:{{ .ICEBERG_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/iceberg"
         CATALOG_S3_ENDPOINT: http://minio.default.svc.cluster.local:9000
+        CATALOG_WAREHOUSE: s3://iceberg
+        CATALOG_IO__IMPL: org.apache.iceberg.aws.s3.S3FileIO
   dataFrom:
     - extract:
         key: cloudnative-pg
